Añadido encabezado de segundo nivel

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>Ola Mundo</1>
-<p>Modificado</p>
-<p>Modificacion pra ver se firmamos con GPG</p>
+    <h2>Encabezado de segundo nivel</h2>
+    <p>Modificado</p>
+    <p>Modificacion pra ver se firmamos con GPG</p>
